--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -15,6 +15,8 @@
     padding: 1.5em;
     border: 20px solid #ECFA00;
     display: flex;
+    width: 80%;
+    flex-wrap: wrap;
 }
 
 .letter,
@@ -46,4 +48,35 @@
     font-size: 2em;
     text-align: center;
     margin-right: 1em;
+}
+
+@media(max-width: 750px) {
+    .game h1 {
+        font-size: 2em;
+    }
+    
+    .wordContainer {
+        margin: 1em;
+        padding: 1em;
+        border: 10px solid #ECFA00;
+    }
+
+    .letter,
+    .blankSquare {
+        font-size: 40px;
+        line-height: 1.2;
+        border: 2px solid #000;
+        height: 60px;
+        width: 60px;
+    }
+
+    .letterContainer p {
+        margin-bottom: 1em;
+    }
+
+    .letterContainer input {
+        height: 30px;
+        width: 30px;
+        font-size: 1em;
+    }
 }
