--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    width: 90%;
+    max-width: 1100px;
+    margin: 0 auto;
 }
