--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,14 @@
-html, body {
-    height: 100vh;
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
+html, 
+body {
+    height: 100%;
     margin: 0;
     padding: 0;
     font-family: Helvetica, sans-serif;
-    background: linear-gradient(180deg, rgba(9, 35, 175,1) 0%, rgba(0, 0, 0, 1) 100%);
+    background: linear-gradient(180deg, #06976c 0%, rgba(0, 0, 0, 1) 100%);
     color: #fff;
 }
 
@@ -21,8 +26,10 @@ button {
     transition: .4s;
 }
 
-button:hover {
+button:hover,
+button:focus {
     background-color: #0923AF;
+    opacity: .75;
 }
 
 @media(max-width: 750px) {
