--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,9 @@
 }
 
 html, 
-body {
-    height: 100%;
+body,
+#root {
+    min-height: 100vh;
     margin: 0;
     padding: 0;
     font-family: Helvetica, sans-serif;
